--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ksaren/fullstack3#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "morgan": "^1.9.0"
   },
